# Drap_Physique

./: CMakeLists.txt  README.md
Drap_Physique/: CMakeLists.txt
Drap_Physique/Notes/: 26_07.md  NouveauFichier  Organisation_Memoire_AoS_vs_SoA.md  README.md  atomic_basics.md  etude_encapsulation.md  notes.txt  objectifs.md  openmp_explained.md  readme2.md
Drap_Physique/include/glad/: glad.h
Drap_Physique/json/: config.json
Drap_Physique/lib/: assimp-vc143-mtd.exp  glfw3.lib  unit.exp
Drap_Physique/old_files/: Tuto_OpenGL.cpp  camera_tutorial.h  drap.h  dump  physic.h  point.cpp  point.h  tissu.h  todo  triangle.cpp  triangle.h  vertex.h
Drap_Physique/src/: Drap_Physique.cpp  Drap_Physique.h  command_console.h  config.h  export_obj_frame.h  glad.c  glencapsulation.h  grabbing.h  light.h  mesh_generator.h  model.h  physicSoA.h  shader.h  simple_camera.h  tissuSoA.h
Drap_Physique/src/shaders/: main_fragment_shader.fs  main_vertex_shader.vs
